--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.15.0
   sign_in_button: ^3.2.0
   google_sign_in: ^6.1.6
+  multi_select_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
